--- a/html/index.html
+++ b/html/index.html
@@ -117,8 +117,107 @@
 </section>
 <section class="payments">
 
+    <h2 class="h2payments">Pricing
+        <div class="pricing">
+    <div class="pricing_box pricing_box-basic">
+        <div class="pricing_details">
+            <div class="pricing_type">Basic</div>
+            <div class="pricing_price">$0</div>
+        </div>
+        <ul class="pricing_items">
+            <li class="pricing_item">100 MB HDD</li>
+            <li class="pricing_item">1 Subdomain</li>
+            <li class="pricing_item">2 E-mails</li>
+            <li class="pricing_item pricing_item-not">Two years licence</li>
+            <li class="pricing_item pricing_item-not">Full support</li>
+        </ul>
+        <a href="#" class="btn3">Begin</a>
+    </div>
+
+
+
+
+
+
+        <div class="pricing_box pricing_box-professional">
+            <div class="pricing_details">
+                <div class="pricing_type">Professional</div>
+                <div class="pricing_price">$25</div>
+                <div class="pricing_limited">Limited offer</div>
+            </div>
+            <ul class="pricing_items">
+                <li class="pricing_item">500 MB HDD</li>
+                <li class="pricing_item">2 Subdomain</li>
+                <li class="pricing_item">5 E-mails</li>
+                <li class="pricing_item">One years licence</li>
+                <li class="pricing_item pricing_item-not">Full support</li>
+
+            </ul>
+            <a href="#" class="btn3">Begin</a>
+
+
+        </div>
+
+        <div class="pricing_box pricing_box-premium">
+            <div class="pricing_details">
+                <div class="pricing_type">Premium</div>
+                <div class="pricing_price">$60</div>
+                <div class="pricing_limited">Limited offer</div>
+            </div>
+            <ul class="pricing_items">
+                <li class="pricing_item">2 GB HDD</li>
+                <li class="pricing_item">5 Subdomain</li>
+                <li class="pricing_item">20 E-mails</li>
+                <li class="pricing_item">Two years licence</li>
+                <li class="pricing_item">Full support</li>
+            </ul>
+            <a href="#" class="btn3">Begin</a>
+        </div>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </section>
 <section class="contact">
+
+    <div class="conteiner">
+        <div class="contactposition">
     <div class="contact_column">
         <h2 class="h2contact">Any questions?</h2>
         <p class="pcontact">
@@ -168,8 +267,8 @@
         </form>
     </div>
 
-
-
+    </div>
+    </div>
 
 
 
