--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Page</title>
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.scss"/>
+    <link rel="stylesheet" href="../css/settings/_reset.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
@@ -15,280 +15,240 @@
 <body>
 <header>
     <div class="conteiner">
-    <div class="top">
-         <div class="left-text">BestShop</div>
-         <div class="menuelements">
-         <div class="menu">Why us</div>
-         <div class="menu">benefits</div>
-         <div class="menu">prices</div>
-         <div class="menu">contact</div>
-         </div>
-    </div>
+        <div class="top">
+            <div class="left-text">BestShop</div>
+            <div class="menuelements">
+                <div class="menu">Why us</div>
+                <div class="menu">benefits</div>
+                <div class="menu">prices</div>
+                <div class="menu">contact</div>
+            </div>
+        </div>
     </div>
 </header>
 <section class="main">
     <h1 class="h1main">Sell More!</h1>
     <p class="pmain">Open shop on our platform and increase your sales</p>
-    <a class="bnt1" href="" >Open your shop</a>
+    <a class="bnt1" href="">Open your shop</a>
     <div class="background"></div>
 </section>
 <section class="stats">
     <h1 class="h1stats">The most popular sales platform in country</h1>
     <div class="stats1">
         <div class="stat">
-    <div class="red">
-        <img class="png1" src="../assets/Person.svg">
-    </div>
+            <div class="red">
+                <img class="png1" alt="Person" src="../assets/Person.svg">
+            </div>
 
-      <h2 class="h2stats">100000+</h2>
-      <p class="pstats">daily entries</p>
+            <h2 class="h2stats">100000+</h2>
+            <p class="pstats">daily entries</p>
         </div>
 
         <div class="stat">
-    <div class="blue">
-        <img class="png2" src="../assets/Eye.svg">
-    </div>
+            <div class="blue">
+                <img class="png2" alt="EYE" src="../assets/Eye.svg">
+            </div>
 
-        <h2 class="h2stats">200000+</h2>
-        <p class="pstats">seen products every day</p>
+            <h2 class="h2stats">200000+</h2>
+            <p class="pstats">seen products every day</p>
         </div>
 
         <div class="stat">
-           <div class="green">
-               <img class="png3" src="../assets/Catalog.svg">
-           </div>
+            <div class="green">
+                <img class="png3" alt="catalog" src="../assets/Catalog.svg">
+            </div>
 
             <h2 class="h2stats">10000+</h2>
             <p class="pstats">added posts daily</p>
 
-       </div>
+        </div>
     </div>
 </section>
 <section class="benefits">
     <div class="box">
-    <div class="box1">
-     <div class="box1text">
-    <h2 class="h2box">Be always first</h2>
-    <p class="pbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-     <div class="line1"></div>
-         </div>
-        <div class="rightside">
-            <img class="macbook" src="../assets/Macbook.png">
-            <div class="element1"></div>
-     </div>
-    </div>
+        <div class="box1">
+            <div class="box1text">
+                <h2 class="h2box">Be always first</h2>
+                <p class="pbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <div class="line1 line"></div>
+            </div>
+            <div class="rightside">
+                <img class="macbook" alt="Macbook" src="../assets/Macbook.png">
+                <div class="element1"></div>
+            </div>
+        </div>
     </div>
 
 
     <div class="box">
-    <div class="box2">
-    <div class="box2text">
-        <h2 class="h2box">Your shop is where you are!</h2>
-        <p class="pbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <div class="line2"></div>
+        <div class="box2">
+            <div class="box2text">
+                <h2 class="h2box">Your shop is where you are!</h2>
+                <p class="pbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <div class="line2 line"></div>
             </div>
-        <div class="rightside2">
-            <img class="phone" src="../assets/iPhone.png">
-            <div class="element2"></div>
+            <div class="rightside2">
+                <img class="phone" alt="Phone" src="../assets/iPhone.png">
+                <div class="element2"></div>
+            </div>
         </div>
     </div>
-    </div>
-
 
 
     <div class="third">
-    <div class="box33">
-    <div class="box3">
-        <div class="box3text">
-        <h2 class="h2box">Increase recognition your brand</h2>
-        <p class="pbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-            ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <div class="line3"></div>
-        </div>
+        <div class="box33">
+            <div class="box3">
+                <div class="box3text">
+                    <h2 class="h2box">Increase recognition your brand</h2>
+                    <p class="pbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt
+                        ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="line3 line"></div>
+                </div>
 
-    </div>
-    </div>
-    <div>
-        <img class="trumpet" src="../assets/Trumpet.png">
-    </div>
+            </div>
+        </div>
+        <div>
+            <img class="trumpet" alt="trumpet" src="../assets/Trumpet.png">
+        </div>
     </div>
 </section>
 <section class="payments">
 
     <h2 class="h2payments">Pricing
         <div class="pricing">
-    <div class="pricing_box pricing_box-basic">
-        <div class="pricing_details">
-            <div class="pricing_type">Basic</div>
-            <div class="pricing_price">$0</div>
-        </div>
-        <ul class="pricing_items">
-            <li class="pricing_item">100 MB HDD</li>
-            <li class="pricing_item">1 Subdomain</li>
-            <li class="pricing_item">2 E-mails</li>
-            <li class="pricing_item pricing_item-not">Two years licence</li>
-            <li class="pricing_item pricing_item-not">Full support</li>
-        </ul>
-        <a href="#" class="btn3">Begin</a>
-    </div>
-
-
-
-
-
-
-        <div class="pricing_box pricing_box-professional">
-            <div class="pricing_details">
-                <div class="pricing_type">Professional</div>
-                <div class="pricing_price">$25</div>
-                <div class="pricing_limited">Limited offer</div>
+            <div class="pricing_box pricing_box-basic">
+                <div class="pricing_details">
+                    <div class="pricing_type">Basic</div>
+                    <div class="pricing_price">$0</div>
+                </div>
+                <ul class="pricing_items">
+                    <li class="pricing_item">100 MB HDD</li>
+                    <li class="pricing_item">1 Subdomain</li>
+                    <li class="pricing_item">2 E-mails</li>
+                    <li class="pricing_item pricing_item-not">Two years licence</li>
+                    <li class="pricing_item pricing_item-not">Full support</li>
+                </ul>
+                <a href="#" class="btn3">Begin</a>
             </div>
-            <ul class="pricing_items">
-                <li class="pricing_item">500 MB HDD</li>
-                <li class="pricing_item">2 Subdomain</li>
-                <li class="pricing_item">5 E-mails</li>
-                <li class="pricing_item">One years licence</li>
-                <li class="pricing_item pricing_item-not">Full support</li>
-
-            </ul>
-            <a href="#" class="btn3">Begin</a>
 
 
-        </div>
+            <div class="pricing_box pricing_box-professional">
+                <div class="pricing_details">
+                    <div class="pricing_type">Professional</div>
+                    <div class="pricing_price">$25</div>
+                    <div class="pricing_limited">Limited offer</div>
+                </div>
+                <ul class="pricing_items">
+                    <li class="pricing_item">500 MB HDD</li>
+                    <li class="pricing_item">2 Subdomain</li>
+                    <li class="pricing_item">5 E-mails</li>
+                    <li class="pricing_item">One years licence</li>
+                    <li class="pricing_item pricing_item-not">Full support</li>
 
-        <div class="pricing_box pricing_box-premium">
-            <div class="pricing_details">
-                <div class="pricing_type">Premium</div>
-                <div class="pricing_price">$60</div>
-                <div class="pricing_limited">Limited offer</div>
+                </ul>
+                <a href="#" class="btn3">Begin</a>
+
+
             </div>
-            <ul class="pricing_items">
-                <li class="pricing_item">2 GB HDD</li>
-                <li class="pricing_item">5 Subdomain</li>
-                <li class="pricing_item">20 E-mails</li>
-                <li class="pricing_item">Two years licence</li>
-                <li class="pricing_item">Full support</li>
-            </ul>
-            <a href="#" class="btn3">Begin</a>
+
+            <div class="pricing_box pricing_box-premium">
+                <div class="pricing_details">
+                    <div class="pricing_type">Premium</div>
+                    <div class="pricing_price">$60</div>
+                    <div class="pricing_limited">Limited offer</div>
+                </div>
+                <ul class="pricing_items">
+                    <li class="pricing_item">2 GB HDD</li>
+                    <li class="pricing_item">5 Subdomain</li>
+                    <li class="pricing_item">20 E-mails</li>
+                    <li class="pricing_item">Two years licence</li>
+                    <li class="pricing_item">Full support</li>
+                </ul>
+                <a href="#" class="btn3">Begin</a>
+            </div>
+
+
         </div>
 
 
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</section>
+    </section>
 <section class="contact">
 
     <div class="conteiner">
         <div class="contactposition">
-    <div class="contact_column">
-        <h2 class="h2contact">Any questions?</h2>
-        <p class="pcontact">
-            Leave your email address or contact us!
-        </p>
-        <div class="contactdetails">
-            <a href="mailto:info@bestshop.xyz" class="details_item">
-                <img src="../assets/Mail%20Icon.svg" alt="mail"/>
-                info@bestshop.xyz
-            </a>
+            <div class="contact_column">
+                <h2 class="h2contact"> Any questions? </h2>
+                <p class="pcontact">
+                    Leave your email address or contact us!
+                </p>
+                <div class="contactdetails">
+                    <a href="mailto:info@bestshop.xyz" class="details_item">
+                        <img src="../assets/Mail%20Icon.svg" alt="mail"/>
+                        info@bestshop.xyz
+                    </a>
 
-            <a href="tel:123456789" class="contactdetails">
-                <img src="../assets/Phone%20Icon.svg" alt="phone"/>
-                123 456 789
-            </a>
+                    <a href="tel:123456789" class="contactdetails">
+                        <img src="../assets/Phone%20Icon.svg" alt="phone"/>
+                        123 456 789
+                    </a>
+                </div>
+            </div>
+
+            <div class="contact_column">
+                <form class="form">
+                    <div class="form_field">
+                        <label class="form_label" for="name">Name</label>
+                        <input type="text" class="form_input name" id="name"/>
+                    </div>
+
+                    <div class="form_field">
+                        <label class="form_label" for="email">E-mail</label>
+                        <input type="email" class="form_input email" id="email"/>
+                    </div>
+
+                    <div class="form_consent">
+                        <label class="form_checkbox">
+                            <input type="checkbox"/>
+                            <span class="checkbox"></span>
+                            <p class="consent_text">
+                                I hereby give consent for my personal data included in my
+                                application to be processed for the purposes of the recruitment
+                                process under the European Parliament’s and Council of the
+                                European Union Regulation on the Protection of Natural Persons as
+                                of 27 April 2016, with regard to the processing of personal data
+                                and on the free movement of such data, and repealing Directive
+                                95/46/EC (Data Protection Directive)
+                            </p>
+                        </label>
+                    </div>
+                    <button type="submit" class="btn2">Send</button>
+                </form>
+            </div>
+
         </div>
     </div>
 
-    <div class="contact_column">
-        <form class="form">
-            <div class="form_field">
-                <label class="form_label" for="name">Name</label>
-                <input type="text" class="form_input name" id="name" />
-            </div>
-
-            <div class="form_field">
-                <label class="form_label" for="email">E-mail</label>
-                <input type="email" class="form_input email" id="email" />
-            </div>
-
-            <div class="form_consent">
-                <label class="form_checkbox">
-                    <input type="checkbox"/>
-                    <span class="checkbox"></span>
-                    <p class="consent_text">
-                        I hereby give consent for my personal data included in my
-                        application to be processed for the purposes of the recruitment
-                        process under the European Parliament’s and Council of the
-                        European Union Regulation on the Protection of Natural Persons as
-                        of 27 April 2016, with regard to the processing of personal data
-                        and on the free movement of such data, and repealing Directive
-                        95/46/EC (Data Protection Directive)
-                    </p>
-                </label>
-            </div>
-            <button type="submit" class="btn2">Send</button>
-        </form>
-    </div>
-
-    </div>
-    </div>
-
-
 
 </section>
-
-
 
 
 <footer class="footer1">
     <div class="conteiner">
         <div class="footer">
-    <div class="left-footer">
-    <div class="left-text">BestShop</div>
-    <div class="copy">© 2019 BestShop LTD, All Rights Reserved</div>
-    </div>
-    <div class="right-footer">
-    <div class="twitter"></div>
-    <div class="facebook"></div>
-    </div>
-    </div>
+            <div class="left-footer">
+                <div class="left-text">BestShop</div>
+                <div class="copy">© 2019 BestShop LTD, All Rights Reserved</div>
+            </div>
+            <div class="right-footer">
+                <div class="twitter"></div>
+                <div class="facebook"></div>
+            </div>
+        </div>
     </div>
 </footer>
 </body>
