--- a/html/index.html
+++ b/html/index.html
@@ -11,12 +11,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+
 </head>
 <body>
 <header>
     <div class="conteiner">
         <div class="top">
             <div class="left-text">BestShop</div>
+            <input type="checkbox" id="menu-btn" class="menu-btn">
+            <label class="icons" for="menu-btn"><i class="fa-solid fa-bars"></i></label>
             <div class="menuelements">
                 <div class="menu">Why us</div>
                 <div class="menu">benefits</div>
@@ -27,9 +34,11 @@
     </div>
 </header>
 <section class="main">
+    <div class="mainitems">
     <h1 class="h1main">Sell More!</h1>
     <p class="pmain">Open shop on our platform and increase your sales</p>
     <a class="bnt1" href="">Open your shop</a>
+    </div>
     <div class="background"></div>
 </section>
 <section class="stats">
@@ -74,9 +83,12 @@
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <div class="line1 line"></div>
             </div>
-            <div class="rightside">
-                <img class="macbook" alt="Macbook" src="../assets/Macbook.png">
-                <div class="element1"></div>
+
+                <div class="rightside">
+                    <img class="macbook" alt="Macbook" src="../assets/Macbook.png">
+                    <div class="element1"></div>
+
+
             </div>
         </div>
     </div>
