--- a/html/index.html
+++ b/html/index.html
@@ -115,7 +115,7 @@
         <div class="box33">
             <div class="box3">
                 <div class="box3text">
-                    <h2 class="h2box">Increase recognition your brand</h2>
+                    <h2 class="h2box">Increase recognition your brand!</h2>
                     <p class="pbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt
                         ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
