--- a/html/index.html
+++ b/html/index.html
@@ -131,7 +131,7 @@
 </section>
 <section class="payments">
 
-    <h2 class="h2payments">Pricing
+    <h2 class="h2payments">Pricing</h2>
         <div class="pricing">
             <div class="pricing_box pricing_box-basic">
                 <div class="pricing_details">
@@ -145,7 +145,7 @@
                     <li class="pricing_item pricing_item-not">Two years licence</li>
                     <li class="pricing_item pricing_item-not">Full support</li>
                 </ul>
-                <a href="#" class="btn3">Begin</a>
+                <a href="#" class="btn3 red">Begin</a>
             </div>
 
 
@@ -163,8 +163,9 @@
                     <li class="pricing_item pricing_item-not">Full support</li>
 
                 </ul>
-                <a href="#" class="btn3">Begin</a>
 
+
+                <a href="#" class="btn3 blue">Begin</a>
 
             </div>
 
@@ -181,13 +182,13 @@
                     <li class="pricing_item">Two years licence</li>
                     <li class="pricing_item">Full support</li>
                 </ul>
-                <a href="#" class="btn3">Begin</a>
+                <a href="#" class="btn3 green">Begin</a>
             </div>
 
 
         </div>
 
-    </h2>
+
 </section>
 <section class="contact">
 
@@ -204,7 +205,7 @@
                         info@bestshop.xyz
                     </a>
 
-                    <a href="tel:123456789" class="contactdetails">
+                    <a href="tel:123456789" class="details_item">
                         <img src="../assets/Phone%20Icon.svg" alt="phone"/>
                         123 456 789
                     </a>
