--- a/html/index.html
+++ b/html/index.html
@@ -239,7 +239,9 @@
                             </p>
                         </label>
                     </div>
+                    <div class="buttonbnt2">
                     <button type="submit" class="btn2">Send</button>
+                        <div>
                 </form>
             </div>
 
@@ -254,7 +256,7 @@
     <div class="conteiner">
         <div class="footer">
             <div class="left-footer">
-                <div class="left-text">BestShop</div>
+                <div class="left-text down">BestShop</div>
                 <div class="copy">© 2019 BestShop LTD, All Rights Reserved</div>
             </div>
             <div class="right-footer">
