--- a/html/index.html
+++ b/html/index.html
@@ -24,11 +24,13 @@
             <div class="left-text">BestShop</div>
             <input type="checkbox" id="menu-btn" class="menu-btn">
             <label class="icons" for="menu-btn"><i class="fa-solid fa-bars"></i></label>
-            <div class="menuelements">
-                <div class="menu">Why us</div>
-                <div class="menu">benefits</div>
-                <div class="menu">prices</div>
-                <div class="menu">contact</div>
+            <div class="MENU">
+            <ul class="menuelements">
+                <li class="menu">Why us</li>
+                <li class="menu">benefits</li>
+                <li class="menu">prices</li>
+                <li class="menu">contact</li>
+            </ul>
             </div>
         </div>
     </div>
