--- a/html/index.html
+++ b/html/index.html
@@ -136,6 +136,7 @@
     <h2 class="h2payments">Pricing</h2>
         <div class="pricing">
             <div class="pricing_box pricing_box-basic">
+                <div class="row1">
                 <div class="pricing_details">
                     <div class="pricing_type">Basic</div>
                     <div class="pricing_price">$0</div>
@@ -147,11 +148,15 @@
                     <li class="pricing_item pricing_item-not">Two years licence</li>
                     <li class="pricing_item pricing_item-not">Full support</li>
                 </ul>
+                   </div>
+                <div class="row2">
                 <a href="#" class="btn3 red">Begin</a>
+                </div>
             </div>
 
 
             <div class="pricing_box pricing_box-professional">
+                <div class="row1">
                 <div class="pricing_details">
                     <div class="pricing_type">Professional</div>
                     <div class="pricing_price">$25</div>
@@ -165,13 +170,14 @@
                     <li class="pricing_item pricing_item-not">Full support</li>
 
                 </ul>
-
-
+                </div>
+                <div class="row2">
                 <a href="#" class="btn3 blue">Begin</a>
-
+                </div>
             </div>
 
             <div class="pricing_box pricing_box-premium">
+                <div class="row1">
                 <div class="pricing_details">
                     <div class="pricing_type">Premium</div>
                     <div class="pricing_price">$60</div>
@@ -184,7 +190,10 @@
                     <li class="pricing_item">Two years licence</li>
                     <li class="pricing_item">Full support</li>
                 </ul>
+                </div>
+                <div class="row2">
                 <a href="#" class="btn3 green">Begin</a>
+                </div>
             </div>
 
 
