--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-
-
 </head>
 <body>
 <header>
@@ -24,14 +22,14 @@
             <div class="left-text">BestShop</div>
             <input type="checkbox" id="menu-btn" class="menu-btn">
             <label class="icons" for="menu-btn"><i class="fa-solid fa-bars"></i></label>
-            <div class="MENU">
-            <ul class="menuelements">
+
+            <ul class="elements">
                 <li class="menu">Why us</li>
                 <li class="menu">benefits</li>
                 <li class="menu">prices</li>
                 <li class="menu">contact</li>
             </ul>
-            </div>
+
         </div>
     </div>
 </header>
@@ -44,34 +42,28 @@
     <div class="background"></div>
 </section>
 <section class="stats">
-    <h1 class="h1stats">The most popular sales platform in country</h1>
+    <h1 class="h1stats hstats">The most popular sales platform in country</h1>
     <div class="stats1">
         <div class="stat">
-            <div class="red">
-                <img class="png1" alt="Person" src="../assets/Person.svg">
+            <div class="red circle">
+                <img class="png1 png" alt="Person" src="../assets/Person.svg">
             </div>
-
-            <h2 class="h2stats">100000+</h2>
+            <h2 class="h2stats hstats">100000+</h2>
             <p class="pstats">daily entries</p>
         </div>
-
         <div class="stat">
-            <div class="blue">
-                <img class="png2" alt="EYE" src="../assets/Eye.svg">
+            <div class="blue circle">
+                <img class="png2 png" alt="EYE" src="../assets/Eye.svg">
             </div>
-
-            <h2 class="h2stats">200000+</h2>
+            <h2 class="h2stats hstats">200000+</h2>
             <p class="pstats">seen products every day</p>
         </div>
-
         <div class="stat">
-            <div class="green">
-                <img class="png3" alt="catalog" src="../assets/Catalog.svg">
+            <div class="green circle">
+                <img class="png3 png" alt="catalog" src="../assets/Catalog.svg">
             </div>
-
-            <h2 class="h2stats">10000+</h2>
+            <h2 class="h2stats hstats">10000+</h2>
             <p class="pstats">added posts daily</p>
-
         </div>
     </div>
 </section>
@@ -85,17 +77,12 @@
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <div class="line1 line"></div>
             </div>
-
-                <div class="rightside">
+                <div class="rightside1">
                     <img class="macbook" alt="Macbook" src="../assets/Macbook.png">
                     <div class="element1"></div>
-
-
             </div>
         </div>
     </div>
-
-
     <div class="box">
         <div class="box2">
             <div class="box2text">
@@ -111,8 +98,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="third">
         <div class="box33">
             <div class="box3">
@@ -132,7 +117,6 @@
     </div>
 </section>
 <section class="payments">
-
     <h2 class="h2payments">Pricing</h2>
         <div class="pricing">
             <div class="pricing_box pricing_box-basic">
@@ -153,8 +137,6 @@
                 <a href="#" class="btn3 red">Begin</a>
                 </div>
             </div>
-
-
             <div class="pricing_box pricing_box-professional">
                 <div class="row1">
                 <div class="pricing_details">
@@ -168,14 +150,12 @@
                     <li class="pricing_item">5 E-mails</li>
                     <li class="pricing_item">One years licence</li>
                     <li class="pricing_item pricing_item-not">Full support</li>
-
                 </ul>
                 </div>
                 <div class="row2">
                 <a href="#" class="btn3 blue">Begin</a>
                 </div>
             </div>
-
             <div class="pricing_box pricing_box-premium">
                 <div class="row1">
                 <div class="pricing_details">
@@ -195,14 +175,9 @@
                 <a href="#" class="btn3 green">Begin</a>
                 </div>
             </div>
-
-
         </div>
-
-
 </section>
 <section class="contact">
-
     <div class="conteiner">
         <div class="contactposition">
             <div class="contact_column">
@@ -215,26 +190,22 @@
                         <img src="../assets/Mail%20Icon.svg" alt="mail"/>
                         info@bestshop.xyz
                     </a>
-
                     <a href="tel:123456789" class="details_item">
                         <img src="../assets/Phone%20Icon.svg" alt="phone"/>
                         123 456 789
                     </a>
                 </div>
             </div>
-
             <div class="contact_column">
                 <form class="form">
                     <div class="form_field">
                         <label class="form_label" for="name">Name</label>
                         <input type="text" class="form_input name" id="name"/>
                     </div>
-
                     <div class="form_field">
                         <label class="form_label" for="email">E-mail</label>
                         <input type="email" class="form_input email" id="email"/>
                     </div>
-
                     <div class="form_consent">
                         <label class="form_checkbox">
                             <input type="checkbox"/>
@@ -252,17 +223,13 @@
                     </div>
                     <div class="buttonbnt2">
                     <button type="submit" class="btn2">Send</button>
-                        <div>
+                        </div>
                 </form>
             </div>
 
         </div>
     </div>
-
-
 </section>
-
-
 <footer class="footer1">
     <div class="conteiner">
         <div class="footer">
@@ -271,8 +238,8 @@
                 <div class="copy">© 2019 BestShop LTD, All Rights Reserved</div>
             </div>
             <div class="right-footer">
-                <div class="twitter"></div>
-                <div class="facebook"></div>
+                <div class="twitter social"></div>
+                <div class="facebook social"></div>
             </div>
         </div>
     </div>
