--- a/html/index.html
+++ b/html/index.html
@@ -20,15 +20,17 @@
     <div class="conteiner">
         <div class="top">
             <div class="left-text">BestShop</div>
+            <div class="menuelements">
             <input type="checkbox" id="menu-btn" class="menu-btn">
             <label class="icons" for="menu-btn"><i class="fa-solid fa-bars"></i></label>
-
             <ul class="elements">
+
                 <li class="menu">Why us</li>
                 <li class="menu">benefits</li>
                 <li class="menu">prices</li>
                 <li class="menu">contact</li>
             </ul>
+            </div>
 
         </div>
     </div>
