--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Page</title>
-    <link rel="stylesheet" href="../css/style.scss"/>
-    <link rel="stylesheet" href="../css/settings/_reset.css"/>
+    <link rel="stylesheet" href="css/settings/_reset.css"/>
+    <link rel="stylesheet" href="css/style.scss"/>
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,21 +50,21 @@
     <div class="stats1">
         <div class="stat">
             <div class="red circle">
-                <img class="png1 png" alt="Person" src="../assets/Person.svg">
+                <img class="png1 png" alt="Person" src="assets/Person.svg">
             </div>
             <h2 class="h2stats hstats">100000+</h2>
             <p class="pstats">daily entries</p>
         </div>
         <div class="stat">
             <div class="blue circle">
-                <img class="png2 png" alt="EYE" src="../assets/Eye.svg">
+                <img class="png2 png" alt="EYE" src="assets/Eye.svg">
             </div>
             <h2 class="h2stats hstats">200000+</h2>
             <p class="pstats">seen products every day</p>
         </div>
         <div class="stat">
             <div class="green circle">
-                <img class="png3 png" alt="catalog" src="../assets/Catalog.svg">
+                <img class="png3 png" alt="catalog" src="assets/Catalog.svg">
             </div>
             <h2 class="h2stats hstats">10000+</h2>
             <p class="pstats">added posts daily</p>
@@ -81,7 +82,7 @@
                 <div class="line1 line"></div>
             </div>
                 <div class="rightside1">
-                    <img class="macbook" alt="Macbook" src="../assets/Macbook.png">
+                    <img class="macbook" alt="Macbook" src="assets/Macbook.png">
                     <div class="element1"></div>
             </div>
         </div>
@@ -96,7 +97,7 @@
                 <div class="line2 line"></div>
             </div>
             <div class="rightside2">
-                <img class="phone" alt="Phone" src="../assets/iPhone.png">
+                <img class="phone" alt="Phone" src="assets/iPhone.png">
                 <div class="element2"></div>
             </div>
         </div>
@@ -115,7 +116,7 @@
             </div>
         </div>
         <div>
-            <img class="trumpet" alt="trumpet" src="../assets/Trumpet.png">
+            <img class="trumpet" alt="trumpet" src="assets/Trumpet.png">
         </div>
     </div>
 </section>
@@ -257,11 +258,11 @@
                 </p>
                 <div class="contactdetails">
                     <a href="mailto:info@bestshop.xyz" class="details_item">
-                        <img src="../assets/Mail%20Icon.svg" alt="mail"/>
+                        <img src="assets/Mail%20Icon.svg" alt="mail"/>
                         info@bestshop.xyz
                     </a>
                     <a href="tel:123456789" class="details_item">
-                        <img src="../assets/Phone%20Icon.svg" alt="phone"/>
+                        <img src="assets/Phone%20Icon.svg" alt="phone"/>
                         123 456 789
                     </a>
                 </div>
@@ -315,5 +316,5 @@
     </div>
 </footer>
 </body>
-<script src="../js/app.js"></script>
+<script src="js/app.js"></script>
 </html>
