--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Page</title>
     <link rel="stylesheet" href="css/settings/_reset.css"/>
     <link rel="stylesheet" href="css/style.scss"/>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
