--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     <div class="box">
         <div class="box2">
             <div class="box2text">
-                <h2 class="h2box">Your shop is where you are!</h2>
-                <p class="pbox">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <h2 class="h2box h2">Your shop is where you are!</h2>
+                <p class="pbox p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 <div class="line2 line"></div>
@@ -103,7 +103,6 @@
         </div>
     </div>
     <div class="third">
-        <div class="box33">
             <div class="box3">
                 <div class="box3text">
                     <h2 class="h2box">Increase recognition your brand!</h2>
@@ -112,13 +111,9 @@
                         ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                     <div class="line3 line"></div>
                 </div>
-
             </div>
-        </div>
-        <div>
             <img class="trumpet" alt="trumpet" src="assets/Trumpet.png">
         </div>
-    </div>
 </section>
 <section class="payments">
     <h2 class="h2payments">Pricing</h2>
