--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
     </div>
 </header>
 <section class="main">
-    <div class="mainitems">
-    <h1 class="h1main">Sell More!</h1>
-    <p class="pmain">Open shop on our platform and increase your sales</p>
-    <a class="bnt1" href="">Open your shop</a>
+
+        <div class="mainitems">
+        <h1 class="h1main">Sell More!</h1>
+        <p class="pmain">Open shop on our platform and increase your sales</p>
+        <a class="bnt1" href="">Open your shop</a>
     </div>
     <div class="background"></div>
+
 </section>
 <section class="stats">
     <h1 class="h1stats hstats">The most popular sales platform in country</h1>
@@ -72,6 +74,7 @@
     </div>
 </section>
 <section class="benefits">
+    <div class="conteiner">
     <div class="box">
         <div class="box1">
             <div class="box1text">
@@ -114,8 +117,10 @@
             </div>
             <img class="trumpet" alt="trumpet" src="assets/Trumpet.png">
         </div>
+    </div>
 </section>
 <section class="payments">
+    <div class="conteiner">
     <h2 class="h2payments">Pricing</h2>
         <div class="pricing">
             <div class="pricing_box pricing_box-basic">
@@ -175,6 +180,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 <section class="calc">
     <h2>Calculate how much you’ll pay</h2>
