--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="box">
         <div class="box2">
             <div class="box2text">
-                <h2 class="h2box h2">Your shop is where you are!</h2>
+                <h2 class="h2box h2">Your shop is<br> where you are!</h2>
                 <p class="pbox p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
